# PIC23

./: .gitignore  CMakeLists.txt  globals.cpp  globals.hpp  main.cpp
LAbor_2/: labor2.cpp  labor2.hpp
LAbor_2/Teil_A/: lab2a.cpp  lab2a.hpp  lap2a.cpp  lap2a.hpp
LAbor_2/Teil_B/: lab2b.cpp  lab2b.hpp
Labor_1/: dateiverwaltung.cpp  dateiverwaltung.hpp  globals.cpp  globals.hpp  labor1.cpp  labor1.hpp
Labor_2/: CMakeLists.txt  Customer.cpp  Customer.hpp  labor2.cpp  labor2.hpp
Labor_2/Teil_A/: A.cpp  A.hpp  lap2a.cpp  lap2a.hpp
Labor_2/dishlib/: AbstractDish.cpp  AbstractDish.hpp  CMakeLists.txt  DishFactory.cpp  DishFactory.hpp  PizzaMargherita.cpp  PizzaMargherita.hpp  VegetableSoup.cpp  VegetableSoup.hpp  dishlib.cpp  dishlib.hpp
